# AgriColMap

./: .gitignore  CMakeLists.txt  README.md
CPM/: CPM.cpp  CPM.h
feature_extractor/: CMakeLists.txt  cloud.ply  main.cpp
original_pointclouds/: README.md
params/: aligner_soybean_params_row3.yaml  padova.yaml
scripts/: maps_and_params_generator.py  rerun.py  result_checker.py  runner.py
src/environment_model/: environment_representation.cpp  environment_representation.h
src/node/: registration_node.cpp
src/pointcloud_handler/: pointcloud_aligner.cpp  pointcloud_aligner.h  pointcloud_handler.cpp
src/visualizer/: visualizer.cpp
